Lukasz - Removed a.button padding on mobile to fix text fitment.

--- a/src/sass/modules/buttons.scss
+++ b/src/sass/modules/buttons.scss
@@ -74,7 +74,6 @@ a.button {
     display: inline-block;
     
     @media #{$mobile} {
-        padding: 10px 0;
         box-sizing: border-box;
     }
 }
